--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="retro.css">
 </head>
 <body>
-<h1>Dôssie - Caminho Neocatecumenal</h1>
+<h1>Dossiê - Caminho Neocatecumenal</h1>
 <p> Esta página é uma compilação de documentos sobre Caminho Neocatecumenal </p>
 <br />
 
@@ -48,6 +48,7 @@ target="_blank">Clique aqui </a>
 
 mais documentos em breve ...
 
+[jan. 2023]
 
 <br>
 <br>
