--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Dôssie</title>
+<title>Dossie - CNC</title>
 <link rel="stylesheet" href="retro.css">
 </head>
 <body>
